# langchain-api-docker

./: .dockerignore  Dockerfile  README.md  deploy.sh  main.py  pyproject.toml  requirements.txt
