[tool.poetry]
name = "langchain-api-docker"
version = "0.1.0"
description = ""
authors = ["myuon <ioi.joi.koi.loi@gmail.com>"]
readme = "README.md"
packages = [{include = "langchain_api_docker"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.98"
waitress = "^2.1.2"
python-dotenv = "^1.0.0"
flask = "^2.2.3"
openai = "^0.27.0"
google-api-python-client = "^2.80.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
